# betanet.c

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  agents.md  code_of_conduct.md  license.md  readme.md  roadmap.md
cmake/: deps.cmake
docs/: index.md
docs/modules/crypto/: ecdh.md  hash.md  index.md  kdf.md  pq.md  registry.md  sign.md
docs/modules/governance/: index.md  quorum.md  uptime.md  voting.md
docs/modules/naming/: id.md  index.md  ledger.md  quorum.md
docs/modules/net/: htx.md  index.md  quic.md  tcp.md
docs/modules/net/htx/: frame.md  htx.md  noise.md  origin_mirror.md  ticket.md
docs/modules/overlay/: bitswap.md  discovery.md  index.md  libp2p.md  peer.md  pow.md
docs/modules/payment/: cashu.md  index.md  lightning.md  voucher.md
docs/modules/privacy/: index.md  mixnet.md  selection.md  trust.md
docs/modules/scion/: header.md  index.md  transition.md
docs/modules/scion/path/: index.md  maintenance.md  path.md
src/: main.c
src/crypto/: CMakeLists.txt  ecdh.c  ecdh.h  hash.c  hash.h  kdf.c  kdf.h  registry.c  registry.h  sign.c  sign.h
src/governance/: CMakeLists.txt
src/naming/: CMakeLists.txt
src/net/: CMakeLists.txt  conn_mgr.c  conn_mgr.h  net_utils.c  net_utils.h  quic.c  tcp.c  tcp.h  tls_utils.c  tls_utils.h
src/net/htx/: frame.c  frame.h  htx.c  htx.h  noise.c  noise.h  origin_mirror.c  origin_mirror.h  ticket.c  ticket.h
src/net/quic/: CMakeLists.txt  config.c  conn.c  internal.h  masque.c  quic.h  stream.c
src/overlay/: CMakeLists.txt
src/payment/: CMakeLists.txt
src/privacy/: CMakeLists.txt
src/scion/: CMakeLists.txt
tests/: CMakeLists.txt
tests/crypto/: test_ecdh.c  test_hash.c  test_kdf.c  test_registry.c  test_sign.c
tests/net/: generate_certs.sh  test_conn_mgr.c  test_htx.c  test_htx_frame.c  test_net_utils.c  test_quic.c  test_tcp.c  test_tls_utils.c
